--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".reporter.CreateReportActivity" />
-        <activity android:name=".organization.OrgMainActivity"></activity>
+        <activity android:name=".organization.OrgMainActivity">
+        </activity>
     </application>
 
 </manifest>
