--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".reporter.CreateReportActivity" />
-        <activity android:name=".organization.OrgMainActivity">
-        </activity>
+        <activity android:name=".organization.OrgMainActivity" />
     </application>
 
 </manifest>
