--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".reporter.CreateReportActivity" />
         <activity android:name=".organization.OrgMainActivity" />
+        <activity android:name=".organization.ReportDetailActivity" />
     </application>
 
 </manifest>
